﻿##########################################
官方网站：https://www.pbootcms.com
标签手册：https://www.pbootcms.com/docs.html
##########################################

PbootCMS V3.0.4 build 2021-02-14
1、新增{pboot:sql sql="语句"}[sql:字段]{/pboot:sql}万能循环标签；
2、修复地址栏扩展后可附带任意字符问题;

PbootCMS V3.0.3 build 2020-10-07
1、修复上版本出现的地址后缀不一致问题；
2、修复搜索功能多语言混乱问题；
3、新增{pboot:isregister}用于js检查用户名是否已经注册；
4、修复已经注册的邮箱仍然发送验证码问题；
5、修复系统存在的安全问题；

PbootCMS V3.0.2 build 2020-08-04
1、修复会员评论无昵称时不解析标签问题；
2、修复默认模板留言页面判断错误问题；
3、修复两处存在安全隐患的漏洞；
4、修复首页筛选兼容模式错误；
5、修复tag标签地址错误问题；
6、修复扩展类文件地址错误问题；
7、修复文章关闭后tag依然调用问题；
8、修复后台设置搜索词标题不解析问题；
9、修复内置附件标签不支持截取问题；
10、其他问题修复与优化；

PbootCMS V3.0.1 build 2020-07-09
1、修复会员权限不足报错页面被404覆盖掉问题；
2、新增对循环体标签整体进行访问权限控制，如list,nav等；
3、新增内容权限不足时调整登录界面“不等待跳登录”参数控制；

PbootCMS V3.0.0 build 2020-07-06
1、新增会员功能，支持注册、登录、资料、积分等操作;
2、支持对会员相关功能进行后台配置;
3、支持对栏目设置会员权限、权限类型、权限提示；
4、支持对内容设置会员权限、权限类型、权限提示；
5、支持模板中设置指定页面必须登录；
6、支持模板中设置标签指定权限可见或隐藏；
7、支持内容评论功能(参考默认模板)；
8、支持会员注册邮件验证码功能；
9、支持留言关联登录用户，新增标签nickname、username、headpic；

//相关表单字段
username、password、checkcode //登录必填
username、nickname、password、rpassword、checkcode //注册必填
comment、checkcode //评论必填

//会员页面标签
{pboot:ucenter} 个人中心地址
{pboot:login} 登录地址
{pboot:register} 注册地址
{pboot:umodify} 资料修改地址
{pboot:logout} 退出登录地址
{pboot:upload} 文件上传AJAX接口
{pboot:islogin} 是否登录状态
{pboot:mustlogin} 设置页面必须登录
{pboot:sendemail} 发送邮件验证码接口,参数to
{pboot:registercodestatus} 会员注册验证码状态0、1、2
{pboot:logincodestatus} 会员登录验证码状态
{pboot:registerstatus} 是否开启注册
{pboot:loginstatus} 是否开启登录
{pboot:commentstatus} 是否开启评论

//会员模板控制标签，如：{content:title showgcode=1}
showgcode=* 指定等级显示，支持多个逗号隔开
showucode=* 指定用户显示，支持多个逗号隔开
hidegcode=* 指定等级隐藏，支持多个逗号隔开
hideucode=* 指定用户隐藏，支持多个逗号隔开
showgcodelt=* 等级小于显示
showgcodegt=* 等级大于显示
showgcodele=* 等级小于等于显示
showgcodege=* 等级大于等于显示
hidegcodelt=* 等级小于隐藏
hidegcodegt=* 等级大于隐藏
hidegcodele=* 等级小于等于隐藏
hidegcodege=* 等级大于等于隐藏
showlogin=1 登录后显示
hidelogin=1 登录后隐藏
对于内容及栏目，也支持在后台直接控制

//会员资料标签,全局可用
{user:ucode} 会员编码
{user:username} 会员用户名
{user:useremail} 会员邮箱