@@ -92,6 +92,31 @@
 		                </div>
 		                
 		                <div class="layui-form-item">
+		                     <label class="layui-form-label">自动转HTTPS</label>
+		                     <div class="layui-input-block">
+		                     	<input type="radio" name="to_https" value="1" {if([$configs.to_https.value]==1)} checked="checked" {/if} title="启用">
+								<input type="radio" name="to_https" value="0" {if([$configs.to_https.value]==0)} checked="checked" {/if} title="禁用">
+		                     	<span class="layui-icon layui-icon-about tips" data-content="访问非HTPPS地址时自动跳转！"></span>
+		                     </div>
+		                </div>
+		                
+		                <div class="layui-form-item">
+		                     <label class="layui-form-label">自动转主域名</label>
+		                     <div class="layui-input-block">
+		                     	<input type="radio" name="to_main_domain" value="1" {if([$configs.to_main_domain.value]==1)} checked="checked" {/if} title="启用">
+								<input type="radio" name="to_main_domain" value="0" {if([$configs.to_main_domain.value]==0)} checked="checked" {/if} title="禁用">
+		                     	<span class="layui-icon layui-icon-about tips" data-content="访问非主域名地址时自动跳转！"></span>
+		                     </div>
+		                </div>
+		                
+		                <div class="layui-form-item">
+		                     <label class="layui-form-label">网站主域名</label>
+		                     <div class="layui-input-inline">
+		                     	<input type="text" name="main_domain"  value="{$configs.main_domain.value}" placeholder="如：www.pbootcms.com"  class="layui-input">
+		                     </div>
+		                </div>
+		                
+		                <div class="layui-form-item">
 		                     <label class="layui-form-label">分页数字条数量</label>
 		                     <div class="layui-input-inline">
 		                     	<input type="text" name="pagenum"  value="{$configs.pagenum.value}" placeholder="请输入前端分页数字条显示数量"  class="layui-input">
