@@ -5,7 +5,11 @@
 
 PbootCMS V3.0.4 build 2021-02-14
 1、新增{pboot:sql sql="语句"}[sql:字段]{/pboot:sql}万能循环标签；
-2、修复地址栏扩展后可附带任意字符问题;
+2、新增自动跳转HTTPS功能参数；
+3、新增自动跳转主域名功能参数；
+4、修复地址栏扩展后可附带任意字符问题;
+5、修复部分主机CDN后台跳转异常；
+6、升级layui为最新版本；
 
 PbootCMS V3.0.3 build 2020-10-07
 1、修复上版本出现的地址后缀不一致问题；
